--- a/package.json
+++ b/package.json
@@ -4,18 +4,33 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "parcel ./index.html",
+        "dev": "parcel ./index.html & node server.js",
         "build": "parcel build ./index.html"
     },
     "keywords": [],
     "author": "kolosochek",
     "license": "MIT",
     "devDependencies": {
-        "parcel": "^2.7.0"
+        "assert": "^2.0.0",
+        "browserify-zlib": "^0.2.0",
+        "buffer": "^6.0.3",
+        "crypto-browserify": "^3.12.0",
+        "events": "^3.3.0",
+        "parcel": "^2.7.0",
+        "path-browserify": "^1.0.1",
+        "process": "^0.11.10",
+        "querystring-es3": "^0.2.1",
+        "stream-browserify": "^3.0.0",
+        "stream-http": "^3.2.0",
+        "url": "^0.11.0",
+        "util": "^0.12.5"
     },
     "dependencies": {
-        "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
         "@anikin/parcel-transformer-handlebars": "^1.0.9",
+        "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
         "handlebars": "^4.7.7"
+    },
+    "directories": {
+        "img:": "./static/img"
     }
 }
