--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dependencies": {
         "@anikin/parcel-transformer-handlebars": "^1.0.9",
         "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-        "handlebars": "^4.7.7"
+        "@parcel/transformer-sass": "^2.0.1",
+        "handlebars": "^4.7.7",
+        "express": "^4.18.2"
     },
     "directories": {
         "img:": "./static/img"
