--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "kolosochek",
     "license": "MIT",
     "devDependencies": {
+        "@parcel/transformer-less": "^2.7.0",
         "assert": "^2.0.0",
         "browserify-zlib": "^0.2.0",
         "buffer": "^6.0.3",
@@ -27,8 +28,9 @@
     "dependencies": {
         "@anikin/parcel-transformer-handlebars": "^1.0.9",
         "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-        "handlebars": "^4.7.7",
-        "express": "^4.18.2"
+        "@parcel/transformer-less": "^2.7.0",
+        "express": "^4.18.2",
+        "handlebars": "^4.7.7"
     },
     "directories": {
         "img:": "./static/img"
