--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.99a",
     "description": "ModemWebchat App. Slowest thing you've ever saw!",
     "scripts": {
-        "dev": "parcel index.html & node server.js",
-        "build": "parcel build index.html"
+        "dev": "parcel *.html & node server.js",
+        "build": "parcel build *.html"
     },
     "keywords": [],
     "author": "kolosochek",
