--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "ModemWebchat App. Slowest thing you've ever saw!",
     "scripts": {
         "dev": "parcel index.html & node server.js",
-        "build": "parcel build index.html && npm run copy-images",
-        "copy-images": "cp -R ./static/images ./dist",
+        "build": "parcel build index.html",
         "start": "parcel index.html & node server.js"
     },
     "keywords": [],
