--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
     "name": "sprint_1",
-    "version": "0.99a",
+    "version": "1.0b",
     "description": "ModemWebchat App. Slowest thing you've ever saw!",
     "scripts": {
         "dev": "parcel index.html & node server.js",
-        "build": "parcel build index.html",
-        "start": "parcel index.html & node server.js"
+        "build": "parcel build index.html"
     },
     "keywords": [],
     "author": "kolosochek",
@@ -30,6 +29,7 @@
         "@anikin/parcel-transformer-handlebars": "^1.0.9",
         "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
         "@parcel/transformer-less": "^2.7.0",
+        "express": "^4.18.2",
         "handlebars": "^4.7.7"
     },
     "directories": {
