wasted like an hour just coz forgot to set damn netlify default pub dir. god bless you

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
     "name": "sprint_1",
-    "version": "1.0b",
+    "version": "0.99a",
     "description": "ModemWebchat App. Slowest thing you've ever saw!",
     "scripts": {
         "dev": "parcel index.html & node server.js",
-        "build": "parcel build index.html"
+        "build": "npm run copy-images & parcel build index.html",
+        "copy-images": "cp -R ./static/images ./dist",
+        "start": "parcel index.html & node server.js"
     },
     "keywords": [],
     "author": "kolosochek",
@@ -29,7 +31,6 @@
         "@anikin/parcel-transformer-handlebars": "^1.0.9",
         "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
         "@parcel/transformer-less": "^2.7.0",
-        "express": "^4.18.2",
         "handlebars": "^4.7.7"
     },
     "directories": {
