--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sprint_1",
-    "version": "0.99a",
+    "version": "1.0b",
     "description": "ModemWebchat App. Slowest thing you've ever saw!",
     "scripts": {
         "dev": "parcel index.html & node server.js",
