--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sprint_1",
-    "version": "1.0b",
+    "version": "1.0",
     "description": "ModemWebchat App. Slowest thing you've ever saw!",
     "scripts": {
         "dev": "parcel index.html & node server.js",
@@ -35,5 +35,9 @@
     },
     "directories": {
         "img:": "./static/img"
+    },
+    "engines" : { 
+        "npm" : ">=8.0.0 ",
+        "node" : ">=12.0.0"
     }
 }
